<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.epita.android.helloclicks.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text"
            android:paddingTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/click_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <TextView
            android:id="@+id/increment"
            android:layout_width="80dp"
            android:layout_height="19dp"
            android:layout_gravity="right"
            android:layout_marginLeft="100dp"
            android:background="#FF0000"
            android:gravity="right"
            android:padding="2dp"
            android:text="0"
            android:textColor="#112233" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_step"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_weight="0.6"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.4">

                <Button
                    android:id="@+id/normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button3"/>

                <Button
                    android:id="@+id/big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button4"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
